[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/singletons/PlayerCamera/CameraShaker/CameraShaker.gd" type="Script" id=1]

[node name="CameraShaker" type="Node"]
script = ExtResource( 1 )

[node name="FrequencyTimer" type="Timer" parent="."]

[node name="DurationTimer" type="Timer" parent="."]

[node name="ShakeTween" type="Tween" parent="."]
[connection signal="timeout" from="FrequencyTimer" to="." method="_on_FrequencyTimer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
